# hipCIM

./: .gitattributes  .gitignore  .readthedocs.yaml  CMakeLists.txt  CONTRIBUTING.md  LICENSE  LICENSE-3rdparty.md  README.md  overrides.cmake  requirements.txt  run_amd
benchmarks/: CMakeLists.txt
conda/environments/: rocm.yaml
cpp/: CMakeLists.txt
cpp/cmake/: hipcim-config.cmake.in
cpp/include/cucim/: boost_compat.h  cuda_runtime.h  cuda_runtime_api.h  cuimage.h
cpp/include/cucim/memory/: dlpack.h
cpp/include/cucim/plugin/: plugin_config.h
cpp/include/cucim/util/: cuda.h
cpp/plugins/cucim.kit.cumed/: CMakeLists.txt
cpp/plugins/cucim.kit.cumed/benchmarks/: CMakeLists.txt
cpp/plugins/cucim.kit.cumed/cmake/: hipcim.kit.hipmed-config.cmake.in
cpp/plugins/cucim.kit.cumed/tests/: CMakeLists.txt
cpp/plugins/cucim.kit.cuslide/: CMakeLists.txt
cpp/plugins/cucim.kit.cuslide/benchmarks/: CMakeLists.txt  main.cpp
cpp/plugins/cucim.kit.cuslide/cmake/: hipcim.kit.hipslide-config.cmake.in
cpp/plugins/cucim.kit.cuslide/src/cuslide/: cuslide.cpp
cpp/plugins/cucim.kit.cuslide/src/cuslide/loader/: nvjpeg_processor.cpp  rocjpeg_processor.cpp  rocjpeg_processor.h
cpp/plugins/cucim.kit.cuslide/src/cuslide/tiff/: ifd.cpp
cpp/plugins/cucim.kit.cuslide/tests/: CMakeLists.txt  test_decode.cpp  test_philips_tiff.cpp  test_read_rawtiff.cpp
cpp/src/: cuimage.cpp
cpp/src/cache/: image_cache_per_process.cpp  image_cache_shared_memory.h
cpp/src/filesystem/: cufile_driver.cpp
cpp/src/loader/: batch_data_processor.cpp  thread_batch_data_loader.cpp
cpp/src/memory/: memory_manager.cpp
cpp/tests/: CMakeLists.txt  config.h  test_cufile.cpp  test_metadata.cpp  test_read_region.cpp
docs/: conf.py  index.rst
docs/doxygen/: Doxyfile
docs/installation/: installation.rst
docs/reference/: supported-functionality.rst
docs/reference/hipcim/: cucim.clara.cache.rst  cucim.clara.filesystem.rst  cucim.clara.io.rst  cucim.clara.rst  cucim.core.operations.color.rst  cucim.core.operations.intensity.rst  cucim.core.operations.morphology.rst  cucim.core.operations.rst  cucim.core.operations.spatial.rst  cucim.core.rst  cucim.rst  cucim.skimage.color.rst  cucim.skimage.data.rst  cucim.skimage.exposure.rst  cucim.skimage.feature.rst  cucim.skimage.filters.rst  cucim.skimage.measure.rst  cucim.skimage.metrics.rst  cucim.skimage.morphology.rst  cucim.skimage.registration.rst  cucim.skimage.restoration.rst  cucim.skimage.rst  cucim.skimage.segmentation.rst  cucim.skimage.transform.rst  cucim.skimage.util.rst  hipcim.rst  localtest.rst  modules.rst
docs/sphinx/: _toc.yml  _toc.yml.in  requirements.txt
examples/: test_decode.py
examples/cpp/: CMakeLists.txt
gds/: CMakeLists.txt
gds/include/: cufile_amd.h  cufile_stub.h
gds/src/: cufile_stub.cpp
notebooks/: Basic_Usage.ipynb  Multi-thread_and_Multi-process_Tests.ipynb  Supporting_Aperio_SVS_Format.ipynb  Welcome.ipynb  gabor_example.ipynb  random_walker_example.ipynb
notebooks/input/: TUPAC-TR-467.svs  TUPAC-TR-488.svs  image.tif  image2.tif  oxford.tif
python/: CMakeLists.txt
python/cucim/: pyproject.toml
python/cucim/src/cucim/: HIPCIM_VERSION  _version.py
python/cucim/src/cucim/skimage/_vendored/: _ndimage_filters_core.py
python/cucim/src/cucim/skimage/feature/tests/: test_template.py
python/cucim/src/cucim/skimage/filters/tests/: test_separable_filtering.py
python/cucim/src/cucim/skimage/segmentation/tests/: test_clear_border.py  test_random_walker.py
python/cucim/src/cucim/skimage/transform/tests/: test_geometric.py
python/cucim/src/cucim/skimage/util/tests/: test_random_noise.py
python/cucim/src/hipcim/: __init__.py
python/cucim/tests/performance/clara/: test_read_region_memory_usage.py
python/cucim/tests/unit/clara/: test_image_cache.py  test_tiff_read_region.py
scripts/: README.md  cucim_compare_coverage.py  cucim_compare_junit.py
test_data/: image.j2k  image.pgm
test_data/baseline/: cucim-coverage_770_1742457165573.xml  cucim-coverage_latest.xml  junit-cucim_20250320_071825_rocm-framework-h100-sxm-1.xml  junit-cucim_latest.xml  junit-cucim_skiplist_latest.txt
test_data/private/: output.ppm  output2.ppm
